--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "python.pythonPath": "C:\\Users\\Flame\\AppData\\Local\\Programs\\Python\\Python36-32\\python.exe",
-    "python.linting.enabled": false
+    "python.linting.enabled": false,
+    "python.formatting.provider": "autopep8"
 }
